revised div to avoid overlap with nav bar

--- a/app/assets/stylesheets/show_story.css
+++ b/app/assets/stylesheets/show_story.css
@@ -15,9 +15,13 @@
   height: 80px;
 }
 
-#story-map {
+#map-offset {
   margin-top: 50px;
+}
+
+#story-map {
   opacity: 0.5;
+  width: 45px;
 }
 
 #story-map:hover {
